change in the logo's size

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="/present/images/logo_small.jpg">
+
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,900' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
@@ -46,12 +45,9 @@
 	<link rel="stylesheet" href="css/style.css">
 
 
-	<!-- Modernizr JS -->
+
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -59,7 +55,7 @@
 		<header id="fh5co-header" role="banner">
 			<div class="container text-center">
 				<div id="fh5co-logo">
-					<a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+					<a href="index.html"><img src="images/logo.png" alt="Logo" class="logo-image"></a>
 				</div>
 				<nav>
 					<ul>
