added photos to gallery

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 			<p>I am also active on social media:</p>
 			<ul class="square">
 				<li><a href="https://www.instagram.com/lucynazylka">my profile on instagram</a></li>
-				<li><a href="https://www.facebook.com/lucynazylka">my fanpage</a></li>
+				<li><a href="https://www.facebook.com/profile.php?id=61560600573632">my fanpage</a></li>
 			</ul>
 		</div>
 
@@ -91,8 +91,8 @@
 				<div class="footer-content">
 					<div class="copyright"><small>&copy; 2024 created by KP</div>
 					<div class="social">
-						<a href="#"><i class="icon-facebook3"></i></a>
-						<a href="#"><i class="icon-instagram2"></i></a>
+						<a href="https://www.facebook.com/profile.php?id=61560600573632"><i class="icon-facebook3"></i></a>
+						<a href="https://www.instagram.com/lucyna_zylka/"><i class="icon-instagram2"></i></a>
 						
 					</div>
 				</div>
