--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 				<div class="footer-content">
 					<div class="copyright"><small>&copy; 2024 created by KP</div>
 					<div class="social">
-						<a href="#"><i class="icon-facebook3"></i></a>
-						<a href="#"><i class="icon-instagram2"></i></a>
+						<a href="https://www.facebook.com/profile.php?id=61560600573632"><i class="icon-facebook3"></i></a>
+						<a href="https://www.instagram.com/lucyna_zylka/"><i class="icon-instagram2"></i></a>
 						
 					</div>
 				</div>
